--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
             </section>
             <!--Cloudstack Links-->
             <section>
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
+                <a target="_bLank" href="https://prwirenow.github.io/Financial/">https://prwirenow.github.io/Financial/</a><br>
+                <a target="_bLank" href="https://prwirenow.s3.us-east-005.backblazeb2.com/Financial/index.html">https://prwirenow.s3.us-east-005.backblazeb2.com/Financial/index.html</a><br>
+                <a target="_bLank" href="https://vercel.live/link/financial-adid-git-main-prwirenows-projects.vercel.app?via=deployment-domains-list&p=1">https://vercel.live/link/financial-adid-git-main-prwirenows-projects.vercel.app?via=deployment-domains-list&p=1</a><br>
+                <a target="_bLank" href="https://singular-cucurucho-743e59.netlify.app/">https://singular-cucurucho-743e59.netlify.app/</a><br>
             </section>
         <!---Sidebar-->
         <div class="side-bar">
